--- a/FAQ
+++ b/FAQ
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: FAQ,v 1.68 2010/06/22 00:11:56 gilles Exp gilles $
+# $Id: FAQ,v 1.69 2010/07/07 22:47:39 gilles Exp gilles $
 
 +------------------+
 | FAQ for imapsync |
@@ -702,7 +702,7 @@ R. Gmail needs SSL
            --host2 localhost
            --user2 tata@est.belle \
            --passfile2 /var/tmp/secret.tata \
-           --useheader 'Message-Id'  --skipsize 
+           --useheader="X-Gmail-Received"  --skipsize 
 
 If your destination imap server doesn't like "[Gmail]" name, just add
 option:
