--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.315 $
+    $Revision: 1.318 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -66,7 +66,7 @@ SYNOPSIS
                [--skipsize] [--allowsizemismatch]
                [--delete] [--delete2]
                [--expunge] [--expunge1] [--expunge2] [--uidexpunge2]
-               [--subscribed] [--subscribe]
+               [--subscribed] [--subscribe] [--subscribe_all] 
                [--nofoldersizes]
                [--dry]
                [--debug] [--debugimap]
@@ -108,7 +108,7 @@ OPTIONS
 HISTORY
     I wrote imapsync because an enterprise (basystemes) paid me to install a
     new imap server without losing huge old mailboxes located on a far away
-    remote imap server accessible by a low bandwith link. The tool imapcp
+    remote imap server accessible by a low bandwidth link. The tool imapcp
     (written in python) could not help me because I had to verify every
     mailbox was well transferred and delete it after a good transfer.
     imapsync started life as a copy_folder.pl patch. The tool copy_folder.pl
@@ -201,22 +201,27 @@ AUTHOR
     teaching free, open and gratis softwares. Do not hesitate to pay him for
     that services.
 
-BUGS and BUG REPORT
-    No known serious bug.
-
+BUG REPORT GUIDELINES
     Report any bugs or feature requests to the public mailing-list or to the
     author.
 
     Help us to help you: follow the following guidelines.
 
-    Read the paper "How To Ask Questions The Smart Way"
-    http://www.catb.org/~esr/faqs/smart-questions.html
+    One time in your life, read the paper "How To Ask Questions The Smart
+    Way" http://www.catb.org/~esr/faqs/smart-questions.html
 
     Before reporting bugs, read the FAQ, the README and the TODO files.
     http://www.linux-france.org/prj/imapsync/
 
-    Make a good title, not just "imapsync" or "problem", a good title is
-    made of keywords summary, not too long (one visible line).
+    Upgrade to last imapsync release, maybe the bug is already fixed.
+
+    Upgrade to last Mail-IMAPClient Perl module.
+    http://search.cpan.org/dist/Mail-IMAPClient/
+
+    Make a good title with word "imapsync" in it (my spam filter won't
+    filter it), Don't write an email title with just "imapsync" or
+    "problem", a good title is made of keywords summary, not too long (one
+    visible line).
 
     Don't write imapsync in uppercase in the email title, we'll know you run
     windows(tm) and you haven't read the README yet.
@@ -370,5 +375,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will always be welcome.
 
-    $Id: imapsync,v 1.315 2010/06/11 02:51:54 gilles Exp gilles $
+    $Id: imapsync,v 1.318 2010/07/07 23:44:35 gilles Exp gilles $
 
