--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.74 2010/06/11 02:49:49 gilles Exp gilles $
+# $Id: TODO,v 1.76 2010/07/07 23:49:12 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -25,24 +25,19 @@ Add NTLM authentification support
 http://cpansearch.perl.org/src/BUZZ/NTLM-1.05/NTLM.pm
 http://curl.haxx.se/rfc/ntlm.html
 
-
 Add "output to reflect everything that imapsync was doing".
 Not everything but flag synchronization will be nice"
 
-Add and option to sync to & from files.
+Add sync imap keywords. Sync gmail labels to imap keyword
+http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=503159
 
-Add an option to make imapsync automatically
-reconnect when the connection drops
+Add and option to sync to & from files.
 
 Add an --aclregextrans2 flag.
 "Today we discovered, that Cyrus and Dovecot use different characters for 
 their ACLs. Syncing ACLs vom Cyrus to Dovecot (at least 1.2) doesn't 
 work. Cyrus uses c and d, Dovecot uses k and x instead." 
 Peer Heinlein.
-
-Add --subscribeall option.
-Is it possible to have a option that subscribes all folders regardless of
-subscription on the source server? Perhaps --subscribeall?
 
 Add a --delete2folders option
 "When syncing mailboxes with imapsync, is there a way to delete folders in the
@@ -150,10 +145,14 @@ http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 Explain expunge behavior.
 
+DONE. Add --subscribeall option.
+Is it possible to have a option that subscribes all folders regardless of
+subscription on the source server? Perhaps --subscribeall?
 
+DONE. Add an option to make imapsync automatically
+reconnect when the connection drops
 
-
-
+DONE. Add Google adsence to imapsync website to see if it can help. 
 
 DONE. Be "FLAGS.SILENT" the normal behavior instead of "+FLAGS.SILENT".
 
