--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,30 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.315
+head: 1.318
 branch:
 locks: strict
-	gilles: 1.315
+	gilles: 1.318
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 315;	selected revisions: 315
+total revisions: 318;	selected revisions: 318
 description:
 ----------------------------
-revision 1.315	locked by: gilles;
+revision 1.318	locked by: gilles;
+date: 2010/07/07 23:44:35;  author: gilles;  state: Exp;  lines: +43 -39
+Added --subscribe_all option.
+Reviewed and updated inline help.
+----------------------------
+revision 1.317
+date: 2010/07/07 22:49:09;  author: gilles;  state: Exp;  lines: +13 -6
+Bug report guideline: upgrade!
+----------------------------
+revision 1.316
+date: 2010/06/29 16:18:09;  author: gilles;  state: Exp;  lines: +10 -11
+Typo bandwidth.
+----------------------------
+revision 1.315
 date: 2010/06/11 02:51:54;  author: gilles;  state: Exp;  lines: +8 -6
 *** empty log message ***
 ----------------------------
