--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,33 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.311
+head: 1.315
 branch:
 locks: strict
-	gilles: 1.311
+	gilles: 1.315
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 311;	selected revisions: 311
+total revisions: 315;	selected revisions: 315
 description:
 ----------------------------
-revision 1.311	locked by: gilles;
+revision 1.315	locked by: gilles;
+date: 2010/06/11 02:51:54;  author: gilles;  state: Exp;  lines: +8 -6
+*** empty log message ***
+----------------------------
+revision 1.314
+date: 2010/06/11 01:42:44;  author: gilles;  state: Exp;  lines: +455 -16
+Added reconnect behavior with Mail::IMAPClient 2.2.9
+----------------------------
+revision 1.313
+date: 2010/06/10 00:37:09;  author: gilles;  state: Exp;  lines: +6 -6
+36 success stories
+----------------------------
+revision 1.312
+date: 2010/06/10 00:35:46;  author: gilles;  state: Exp;  lines: +6 -5
+1und1 success story
+----------------------------
+revision 1.311
 date: 2010/04/27 23:03:39;  author: gilles;  state: Exp;  lines: +35 -12
 Fixed bug in compare_lists(). Thanks to Pertti Karppinen.
 ----------------------------
