--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.311 $
+    $Revision: 1.315 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -246,9 +246,10 @@ IMAP SERVERS
      - dkimap4 2.39
      - Imail 7.04 (maybe).
 
-    Success stories reported with the following 35 imap servers (software
+    Success stories reported with the following 36 imap servers (software
     names are in alphabetic order):
 
+     - 1und1 H mimap1 84498 [host1]
      - Archiveopteryx 2.03, 2.04, 2.09, 2.10 [host2], 3.0.0 [host2]
        (OSL 3.0) http://www.archiveopteryx.org/
      - BincImap 1.2.3 (GPL) (http://www.bincimap.org/)
@@ -369,5 +370,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will always be welcome.
 
-    $Id: imapsync,v 1.311 2010/04/27 23:03:39 gilles Exp gilles $
+    $Id: imapsync,v 1.315 2010/06/11 02:51:54 gilles Exp gilles $
 
