--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.73 2010/02/07 22:03:06 gilles Exp gilles $
+# $Id: TODO,v 1.74 2010/06/11 02:49:49 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -16,6 +16,14 @@ Add a best practice migration tips document.
 Fix the mailing-list archive bug with From at
 the beginning of a line
 http://www.linux-france.org/prj/imapsync_list/msg00307.html
+
+Evaluate 
+http://www.rackspace.com/apps/email_hosting/migrations
+http://www.yippiemove.com/
+
+Add NTLM authentification support
+http://cpansearch.perl.org/src/BUZZ/NTLM-1.05/NTLM.pm
+http://curl.haxx.se/rfc/ntlm.html
 
 
 Add "output to reflect everything that imapsync was doing".
