--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,29 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.318
+head: 1.321
 branch:
 locks: strict
-	gilles: 1.318
+	gilles: 1.321
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 318;	selected revisions: 318
+total revisions: 321;	selected revisions: 321
 description:
 ----------------------------
-revision 1.318	locked by: gilles;
+revision 1.321	locked by: gilles;
+date: 2010/07/09 03:27:31;  author: gilles;  state: Exp;  lines: +6 -6
+Added Smarter Mail 5.0 success.
+----------------------------
+revision 1.320
+date: 2010/07/09 03:02:07;  author: gilles;  state: Exp;  lines: +20 -23
+Better reconnect handling.
+----------------------------
+revision 1.319
+date: 2010/07/09 00:49:26;  author: gilles;  state: Exp;  lines: +9 -7
+Added Maxcommandlength call.
+----------------------------
+revision 1.318
 date: 2010/07/07 23:44:35;  author: gilles;  state: Exp;  lines: +43 -39
 Added --subscribe_all option.
 Reviewed and updated inline help.
