--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.318 $
+    $Revision: 1.321 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -297,7 +297,7 @@ IMAP SERVERS
      - Rockliffe Mailsite 5.3.11, 4.5.6
      - Samsung Contact IMAP server 8.5.0
      - Scalix v10.1, 10.0.1.3, 11.0.0.431
-     - SmarterMail
+     - SmarterMail, Smarter Mail 5.0 Enterprise.
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - Sun Java(tm) System Messaging Server 6.2-2.05,  6.2-7.05
      - Surgemail 3.6f5-5
@@ -375,5 +375,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will always be welcome.
 
-    $Id: imapsync,v 1.318 2010/07/07 23:44:35 gilles Exp gilles $
+    $Id: imapsync,v 1.321 2010/07/09 03:27:31 gilles Exp gilles $
 
