--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,43 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.321
+head: 1.327
 branch:
 locks: strict
-	gilles: 1.321
+	gilles: 1.327
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 321;	selected revisions: 321
+total revisions: 327;	selected revisions: 327
 description:
 ----------------------------
-revision 1.321	locked by: gilles;
+revision 1.327	locked by: gilles;
+date: 2010/07/12 00:23:02;  author: gilles;  state: Exp;  lines: +7 -5
+Good exit at the end.
+----------------------------
+revision 1.326
+date: 2010/07/12 00:16:03;  author: gilles;  state: Exp;  lines: +9 -7
+Default value when no reconnect.
+----------------------------
+revision 1.325
+date: 2010/07/11 23:26:04;  author: gilles;  state: Exp;  lines: +72 -38
+Added --pidfile option.
+Added die_clean() exit_clean() functions to remove pid file before quitting.
+----------------------------
+revision 1.324
+date: 2010/07/11 21:28:23;  author: gilles;  state: Exp;  lines: +24 -18
+Added --debugimap1 --debugimap2 to permit imap outpout with only one host.
+----------------------------
+revision 1.323
+date: 2010/07/11 21:10:17;  author: gilles;  state: Exp;  lines: +28 -10
+Added Reconnect_counter()
+Added reconnect statistics
+----------------------------
+revision 1.322
+date: 2010/07/10 22:30:18;  author: gilles;  state: Exp;  lines: +46 -9
+Added regression tests to remove first "From " header line. tests_regexmess()
+----------------------------
+revision 1.321
 date: 2010/07/09 03:27:31;  author: gilles;  state: Exp;  lines: +6 -6
 Added Smarter Mail 5.0 success.
 ----------------------------
