--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.321 $
+    $Revision: 1.327 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -69,10 +69,12 @@ SYNOPSIS
                [--subscribed] [--subscribe] [--subscribe_all] 
                [--nofoldersizes]
                [--dry]
-               [--debug] [--debugimap]
+               [--debug] [--debugimap][--debugimap1][--debugimap2]
                [--timeout <int>] [--fast]
                [--split1] [--split2] 
                [--reconnectretry1 <int>] [--reconnectretry2 <int>]
+               [--pidfile <filepath>]
+               [--tmpdir  <dirpath>]
                [--version] [--help]
   
 DESCRIPTION
@@ -375,5 +377,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will always be welcome.
 
-    $Id: imapsync,v 1.321 2010/07/09 03:27:31 gilles Exp gilles $
+    $Id: imapsync,v 1.327 2010/07/12 00:23:02 gilles Exp gilles $
 
