--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.76 2010/07/07 23:49:12 gilles Exp gilles $
+# $Id: TODO,v 1.77 2010/07/12 00:13:15 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -69,20 +69,16 @@ issues so far". Sounds good!
 
 Add an option to implement the faq entry about copying a contact folder.
 
+
 imapsync doesn't report well. It should says "I had
 to sync 123 messages but I could transfer only 99 messages"
+Maybe count messages not transfered because they're dupplicate.
 
 Fix bug "not possible to use space in the imap password"
 
 Add kerberos authentification
 
-Add NOOP commands to avoid timeouts.
-
-Add a --pidfile option.
-
-Write a clean_exit() replacing each die() or exit() call.
 Add a --skipheaderinfolder option 
-See the code patches/imapsync_Cvitkovich_pidfile_tmpfile
 
 Fix this:
 > - Erreur avec la traditionnelle différence entre Windows
@@ -144,6 +140,17 @@ Add cyrus link about INBOX. namespace
 http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 Explain expunge behavior.
+
+
+
+
+DONE. Write a clean_exit() replacing each die() or exit() call.
+Wrote exit_clean() and die_clean() to remove pid file.
+
+DONE. Add a --pidfile option.
+
+DONE. Add NOOP commands to avoid timeouts.
+Useless since reconnect mode permits timeouts.
 
 DONE. Add --subscribeall option.
 Is it possible to have a option that subscribes all folders regardless of
