--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,41 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.327
+head: 1.331
 branch:
 locks: strict
-	gilles: 1.327
+	gilles: 1.331
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 327;	selected revisions: 327
+total revisions: 331;	selected revisions: 331
 description:
 ----------------------------
-revision 1.327	locked by: gilles;
+revision 1.331	locked by: gilles;
+date: 2010/07/13 23:28:59;  author: gilles;  state: Exp;  lines: +6 -6
+default values for h1_mess_duplicate h1_mess_size_total_duplicate
+----------------------------
+revision 1.330
+date: 2010/07/13 03:44:36;  author: gilles;  state: Exp;  lines: +56 -36
+Bugfix. Duplicate messages on host2 were not deleted with --delete2
+----------------------------
+revision 1.329
+date: 2010/07/12 23:28:00;  author: gilles;  state: Exp;  lines: +13 -21
+--skipsize turned on by default.
+Why? all examples on internet use --skipsize.
+imapsync can not change buggy imp servers.
+
+Useless code cleanup.
+----------------------------
+revision 1.328
+date: 2010/07/12 22:49:23;  author: gilles;  state: Exp;  lines: +18 -19
+Changed basic documention:
+ - examples with --password1 instead of --passfile1
+Why? all exemples on internet use --password1 so users
+use --password1 even I've never told them to do so.
+Usability fix.
+----------------------------
+revision 1.327
 date: 2010/07/12 00:23:02;  author: gilles;  state: Exp;  lines: +7 -5
 Good exit at the end.
 ----------------------------
