--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.77 2010/07/12 00:13:15 gilles Exp gilles $
+# $Id: TODO,v 1.78 2010/07/14 13:37:02 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -20,6 +20,10 @@ http://www.linux-france.org/prj/imapsync_list/msg00307.html
 Evaluate 
 http://www.rackspace.com/apps/email_hosting/migrations
 http://www.yippiemove.com/
+
+
+DONE. Bugfix. Duplicate messages on host2 are not deleted with --delete2
+Reason: "Skipping msg #120:508 in host2 folder INBOX.2005-INBOX (duplicate so we ignore this message)"
 
 Add NTLM authentification support
 http://cpansearch.perl.org/src/BUZZ/NTLM-1.05/NTLM.pm
