--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,26 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.331
+head: 1.333
 branch:
 locks: strict
-	gilles: 1.331
+	gilles: 1.333
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 331;	selected revisions: 331
+total revisions: 333;	selected revisions: 333
 description:
 ----------------------------
-revision 1.331	locked by: gilles;
+revision 1.333	locked by: gilles;
+date: 2010/07/14 23:55:13;  author: gilles;  state: Exp;  lines: +7 -9
+docfix
+----------------------------
+revision 1.332
+date: 2010/07/14 23:09:02;  author: gilles;  state: Exp;  lines: +251 -178
+Reviewed variable names.
+Began to push subroutines below main.
+----------------------------
+revision 1.331
 date: 2010/07/13 23:28:59;  author: gilles;  state: Exp;  lines: +6 -6
 default values for h1_mess_duplicate h1_mess_size_total_duplicate
 ----------------------------
